--- a/git/config
+++ b/git/config
@@ -4,9 +4,10 @@
 [core]
 	editor = vim
 	excludesfile = /home/eli/.gitignore_global
+	fileMode = false
 	
 [credential]
-	helper = cache --timeout=3600
+	helper = cache --timeout=7200
 [push]
 	default = simple
 [alias]
@@ -14,3 +15,4 @@
 [user]
 	email = eli.mulhall@gmail.com
 	name = Elias Mulhall
+	signingkey = 22E080596464FA36
