add new applications to ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,9 @@ gtk-2.0/gtkfilechooser.ini
 nvim/tmp
 zsh/zcompdump
 zsh/zhistory
+mopidy/
+mps-youtube/
+mps/
+nvim/fzf/
+
+no changes added to commit (use "git add" and/or "git commit -a")
